# valide

./: .gitignore  Cargo.toml  README.md
valide/: Cargo.toml
valide_derive/: Cargo.toml
valide_derive/src/: lib.rs
